# lexer-gen

./: .clang-tidy  README.md  build_config.h.in  flake.nix  meson.build
examples/: c_lexer.leg  simple_expr.c.leg  simple_expr.java.leg  simple_expr.js.leg  simple_expr.leg  simple_expr.py.leg
include/: argparse.h  diagnostics.h  fwd.h  regex.h  utils.h
include/machine/: cg.h  data.h  dfa.h  equivalence_classes.h  interval_set.h  nfa.h  unicode_identifier_ranges.h
pch/: pch.h
snippets/: Source.java  span_source.h  span_source.hpp  span_source.js  span_source.py  stream_source.hpp
src/: argparse.cpp  diagnostics.cpp  dump.cpp  lexergen.cpp  main.cpp  regex.cpp  regex_parser.cpp  utils.cpp
src/machine/: dfa.cpp  nfa.cpp
tools/: gen_unicode_identifier_ranges.py
tree-sitter-leg/: grammar.js  package.json  tree-sitter.json
tree-sitter-leg/queries/: highlights.scm
tree-sitter-leg/src/: grammar.json  node-types.json  parser.c
